fix: fix issue with header and horizontal scroll

--- a/pages/main/style_css/style.css
+++ b/pages/main/style_css/style.css
@@ -415,9 +415,10 @@ body {
 		top: 13.1rem;
 		left: 17rem;
 	}
-	
-	.mobile__header{
-		position: absolute;
+
+	html, body {
+		max-width: 100%;
+		overflow-x: hidden;
 	}
 }
 
